Added: Performance option when used time greater than alloted time

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30406,3 +30406,10 @@ dl li {
   line-height: 18px; /* Center the icon vertically */
   background-color: transparent;
 }
+.hidden {
+  display: none;
+}
+
+.performance {
+  color: red;
+}
